# sml-analyzer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.sml
crates/database/: Cargo.toml
crates/database/src/: arena.rs  database.rs  lib.rs  types.rs
crates/database/src/builtin/: mod.rs
crates/sml-analyzer/: Cargo.toml
crates/sml-analyzer/src/: cache.rs  completions.rs  dispatch.rs  main.rs  state.rs  types.rs  util.rs
src/: extension.ts
syntaxes/: sml.tmLanguage.json
