[package]
name = "database"
version = "0.1.0"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sml-util = { git = "https://github.com/SomewhatML/sml-compiler/" }
sml-frontend = { git = "https://github.com/SomewhatML/sml-compiler/" }
sml-core = { git = "https://github.com/SomewhatML/sml-compiler/" }
typed-arena = "2.0"
log = "0.4.3"