[package]
name = "sml-analyzer"
version = "0.1.0"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = "0.11.0"
tokio = { version = "0.2", features = ["rt-core", "macros", "io-std"] }
tokio-util = { version = "0.3", features = ["codec"] }